<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_id"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:paddingBottom="64dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_id">

            <TextView
                android:id="@+id/info_pane_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:text="@string/info_pane"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/info_pane_brand_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_pane_brand"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info_pane_id" />

            <TextView
                android:id="@+id/info_pane_brand_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info_pane_id"
                tools:text="Samsung" />

            <TextView
                android:id="@+id/info_pane_manufacturer_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_pane_manufacturer"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info_pane_brand_id" />

            <TextView
                android:id="@+id/info_pane_manufacturer_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info_pane_brand_id"
                tools:text="Google" />

            <TextView
                android:id="@+id/info_pane_model_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_pane_model"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info_pane_manufacturer_id" />

            <TextView
                android:id="@+id/info_pane_model_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info_pane_manufacturer_id"
                tools:text="Pixel AZ" />

            <TextView
                android:id="@+id/info_pane_device_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_pane_device"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info_pane_model_id" />

            <TextView
                android:id="@+id/info_pane_device_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info_pane_model_id"
                tools:text="orangeJuice" />

            <TextView
                android:id="@+id/info_pane_product_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_pane_product"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info_pane_device_id" />

            <TextView
                android:id="@+id/info_pane_product_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info_pane_device_id"
                tools:text="45987321" />

            <TextView
                android:id="@+id/info_pane_hardware_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_pane_hardware"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info_pane_product_id" />

            <TextView
                android:id="@+id/info_pane_hardware_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info_pane_product_id"
                tools:text="PIE" />

            <TextView
                android:id="@+id/info_pane_sensors_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_pane_sensors"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info_pane_hardware_id" />

            <TextView
                android:id="@+id/info_pane_sensors_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info_pane_sensors_id"
                tools:text="capteurs,\ndivers,\nen,\nliste" />

            <TextView
                android:id="@+id/sdk_pane_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:paddingBottom="4dp"
                android:text="@string/sdk_pane"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info_pane_sensors_value" />

            <TextView
                android:id="@+id/sdk_pane_release_version_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sdk_pane_release_version"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sdk_pane_id" />

            <TextView
                android:id="@+id/sdk_pane_release_version_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sdk_pane_id"
                tools:text="14" />

            <TextView
                android:id="@+id/sdk_pane_sdk_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sdk_pane_sdk"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sdk_pane_release_version_id" />

            <TextView
                android:id="@+id/sdk_pane_sdk_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sdk_pane_release_version_id"
                tools:text="33" />

            <TextView
                android:id="@+id/sdk_pane_release_name_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sdk_pane_release_name"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sdk_pane_sdk_id" />

            <TextView
                android:id="@+id/sdk_pane_release_name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sdk_pane_sdk_id"
                tools:text="PIE" />

            <TextView
                android:id="@+id/sdk_pane_build_string_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sdk_pane_build_string"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sdk_pane_release_name_id" />

            <TextView
                android:id="@+id/sdk_pane_build_string_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sdk_pane_release_name_id"
                tools:text="QHD 120236/12" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>